# featuregraph

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
docs/: reproducibility.md
notebooks/: accumulation.ipynb  bidmc_respiration.ipynb  demo_notebook.ipynb  development.ipynb  objects.ipynb  oscillation_objects.ipynb  tep_reactor_pressure.ipynb  test.ipynb
reproducibility/: manifest.json
scripts/: reproduce.py
src/featuregraph/: __init__.py
src/featuregraph-functional/: __init__.py
src/featuregraph-functional/notebooks/: accumulation_definitions.ipynb  accumulation_objects.ipynb  test.ipynb
src/featuregraph-functional/oscillation/: __init__.py  waves.py
src/featuregraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/featuregraph/accumulation/: accumulations.py
src/featuregraph/behaviors/: accumulation.py  base.py  objects.py  oscillation.py
src/featuregraph/datasets/: _bidmc.py  _eastman.py
src/featuregraph/operators/: events.py  measures.py  states.py
src/featuregraph/oscillation/: _functional.py
src/featuregraph/preprocessing/: smoothing.py
src/featuregraph/utils/: _bidmc.py  _eastman.py  _plot.py
src/featuregraph_research/: __init__.py
src/featuregraph_research/behaviors/: transition.py
src/featuregraph_research/constructors/: primitives.py
src/featuregraph_research/datasets/: __init__.py  _bidmc.py  _eastman.py
src/featuregraph_research/operators/: states.py
src/featuregraph_research/utils/: _rename_map.py
tests/: conftest.py  test_accumulation.py  test_behavior.py  test_events.py  test_objects.py  test_oscillation.py  test_reproduce.py  test_states.py
