[build-system]
requires = ["setuptools>=77,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "featuregraph"
version = "0.1.0a1"
description = "Construct explicit behavioral objects from observation sequences."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [
    { name = "Nazia Habib" },
]
keywords = [
    "time series",
    "behavioral objects",
    "oscillation",
    "event detection",
    "signal processing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26,<3",
    "pandas>=2.0,<4",
    "scipy>=1.10,<2",
    "requests>=2.31,<3",
    "pyarrow>=14,<25",
    "openpyxl>=3.1,<4",
    "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
dev = [
    "build>=1.2,<2",
    "mypy>=1.10,<2",
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<8",
    "ruff>=0.6,<1",
]
notebooks = [
    "ipykernel>=6.0,<8",
    "jupyterlab>=4.0,<5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"

[tool.coverage.run]
source = ["featuregraph"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
